remove list.of